<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <android.support.v4.view.ViewPager
        android:id="@+id/homepage_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RadioGroup
        android:id="@+id/homepage_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_color">
        <RadioButton
            android:id="@+id/home_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/home_page"
            android:textColor="@color/yellow"
            android:checked="true"
            android:padding="5dp"
            android:drawableTop="@drawable/radiobutton_homepage_check"/>
        <RadioButton
            android:id="@+id/home_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/order"
            android:textColor="@color/white"
            android:padding="5dp"
            android:drawableTop="@drawable/radiobutton_order_check"/>
        <RadioButton
            android:id="@+id/home_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:padding="5dp"
            android:drawableTop="@drawable/radiobutton_mine_check"/>
    </RadioGroup>
</LinearLayout>