<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/black">
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="我的位置"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/home_position"
            android:drawablePadding="5dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_search"
            android:padding="7dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/banner"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/go_nurse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_class_nurse"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nurse"
                        android:textColor="@color/main_color"
                        android:padding="4dp"
                        android:gravity="center"
                        android:layout_alignParentBottom="true"
                        android:background="@color/background_color"
                        android:alpha="0.7"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/clean_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:src="@mipmap/home_class_pc_clean"
                        android:scaleType="centerCrop"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clean"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/main_color" />
                        <TextView
                        android:id="@+id/clean_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_environment"
                        android:textSize="11sp"
                        android:layout_marginTop="3dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/cook_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <ImageView
                    android:id="@+id/cooking"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:src="@mipmap/home_class_pc_cooking" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cooking"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/main_color" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/easy_enjoy_food"
                            android:textSize="11sp"
                            android:layout_marginTop="3dp" />
                    </LinearLayout>

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommend"
            android:textSize="17sp"
            android:textColor="#BFBEBE"
            android:background="@color/background_color"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="0dp"/>
        </LinearLayout>
</LinearLayout>